<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_group_vboard"
        android:layout="@layout/category_preference" >

        <EditTextPreference
            android:defaultValue="username"
            android:key="@string/pref_key_user"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_user" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_sync_post_interval_titles"
            android:entryValues="@array/pref_sync_post_interval_values"
            android:key="@string/pref_key_sync_post_interval"
            android:title="@string/pref_title_sync_post_interval" />
    </PreferenceCategory>
</PreferenceScreen>