<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner" >

    <LinearLayout
        android:id="@+id/dialogScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:id="@+id/title"
                style="@style/RobotoMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_light_pink"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/videoRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/common_white" />

            <NumberPicker
                android:id="@+id/captionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:divider="?android:attr/dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle" >

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/saver_cancel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_light_black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/saver_save"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/color_light_black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="16.0dip"
        android:orientation="vertical" >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:maxWidth="@dimen/saver_dialog_image_loading_max_size"
            android:maxHeight="@dimen/saver_dialog_image_loading_max_size"
            android:contentDescription="@string/app_name"
            android:background="@color/common_white"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/running_man" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/loadingProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="100"
            android:layout_marginStart="80.0dip"
            android:layout_marginEnd="80.0dip"
            android:visibility="gone" />

        <TextView
            style="@style/RobotoBlack"
            android:id="@+id/loadingStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/saver_wait"
            android:textColor="@color/black_opa50" />
    </LinearLayout>

</FrameLayout>