<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/postLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/board_item_post_comment_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/postUserImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/post_user_image_description"
                android:maxHeight="@dimen/board_item_profile_image_size"
                android:maxWidth="@dimen/board_item_profile_image_size"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/board_item_post_comment_margin"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postUser"
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_light_black"
                    tools:text="Post User" />

                <TextView
                    android:id="@+id/postCreated"
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_light_black"
                    tools:text="Post Created" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/remove"
                android:layout_width="@dimen/board_remove_button_size"
                android:layout_height="@dimen/board_remove_button_size"
                android:layout_gravity="end"
                android:layout_weight="0.1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/remove_post_icon"
                android:tint="@color/color_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/post"
            style="@style/RobotoMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/board_item_post_comment_margin"
            android:textColor="@color/color_light_black"
            tools:text="Post bla bla bla lorem de ipsum" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/postLayout"
        android:orientation="vertical"
        android:paddingStart="@dimen/board_item_comment_padding_start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/board_item_content_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lastCommentUserImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/latest_comment_user_image_description"
                android:maxHeight="@dimen/board_item_profile_image_size"
                android:maxWidth="@dimen/board_item_profile_image_size"
                android:scaleType="fitCenter"
                tools:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/board_item_post_comment_margin"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lastCommentUser"
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_light_black"
                    tools:text="LC User" />

                <TextView
                    android:id="@+id/lastCommentCreated"
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_light_black"
                    tools:text="LC Created" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/lastComment"
            style="@style/RobotoMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/board_item_content_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_light_black"
            tools:text="Last comment bla bla bla lorem de ipsum" />

        <ImageView
            android:id="@+id/lastCommentSticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/board_item_post_comment_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/latest_comment_sticker_description"
            android:maxHeight="@dimen/board_max_sticker_size"
            android:maxWidth="@dimen/board_max_sticker_size"
            android:scaleType="fitCenter"
            android:visibility="gone"
            tools:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalComment"
        style="@style/RobotoMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastCommentLayout"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/board_item_content_margin"
        android:gravity="end|center_vertical"
        android:textColor="@color/color_light_black"
        tools:text="Total comments: 10" />

</RelativeLayout>